# libadwaita-rs

./: Cargo.toml  meson.build
libadwaita/: Cargo.toml  Gir.toml
libadwaita/src/: breakpoint.rs  lib.rs  message_dialog.rs  prelude.rs
libadwaita/src/auto/: about_window.rs  action_row.rs  animation.rs  application.rs  application_window.rs  avatar.rs  banner.rs  bin.rs  breakpoint.rs  breakpoint_bin.rs  breakpoint_condition.rs  button_content.rs  callback_animation_target.rs  carousel.rs  carousel_indicator_dots.rs  carousel_indicator_lines.rs  clamp.rs  clamp_layout.rs  clamp_scrollable.rs  combo_row.rs  entry_row.rs  enum_list_item.rs  enums.rs  expander_row.rs  flags.rs  flap.rs  functions.rs  header_bar.rs  leaflet.rs  leaflet_page.rs  message_dialog.rs  mod.rs  navigation_page.rs  navigation_split_view.rs  navigation_view.rs  overlay_split_view.rs  password_entry_row.rs  preferences_group.rs  preferences_page.rs  preferences_row.rs  (+30 more)
libadwaita/src/subclass/: action_row.rs  message_dialog.rs  mod.rs  navigation_page.rs  swipeable.rs
libadwaita/sys/: Cargo.toml  Gir.toml  build.rs
libadwaita/sys/src/: lib.rs
libadwaita/sys/tests/: abi.rs  constant.c  layout.c
