[package]
name = "libadwaita-sys"
version = "0.6.0"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2021"
build = "build.rs"
links = "libadwaita-1"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "gnome", "adwaita", "GUI"]
description = "FFI bindings for libadwaita"
license = "MIT"
homepage = "https://world.pages.gitlab.gnome.org/Rust/libadwaita-rs/"
repository = "https://gitlab.gnome.org/World/Rust/libadwaita-rs"
documentation = "https://world.pages.gitlab.gnome.org/Rust/libadwaita-rs/stable/latest/docs/libadwaita_sys"

[package.metadata.system-deps.libadwaita_1]
name = "libadwaita-1"
version = "1"

[package.metadata.system-deps.libadwaita_1.v1_1]
version = "1.1"

[package.metadata.system-deps.libadwaita_1.v1_2]
version = "1.2"

[package.metadata.system-deps.libadwaita_1.v1_3]
version = "1.3"

[package.metadata.system-deps.libadwaita_1.v1_4]
version = "1.4"

[package.metadata.docs.rs]
features = []

[lib]
name = "libadwaita_sys"

[dependencies]
libc = "0.2"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.gtk]
package = "gtk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.8"

[dependencies.gdk]
package = "gdk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.8"

[dependencies.pango]
package = "pango-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v1_1 = []
v1_2 = ["v1_1"]
v1_3 = ["v1_2"]
v1_4 = ["v1_3"]
